[project]
name = "tinyclaw"
version = "0.1.0"
description = "A production-grade AI Agent Gateway"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "croniter>=2.0.0",
    "httpx>=0.27.0",
    "lark-oapi>=1.5.3",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
feishu = ["lark-oapi>=1.4.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
tinyclaw = "tinyclaw.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinyclaw"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
